# translate

./: .gitattributes  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  cloudflared-config.yml  deploy.bat  docker-compose.yml  pyproject.toml  run-prod.bat  run.bat
backend/app/: config.py  languages.py  main.py  schemas.py
backend/app/middleware/: auth.py
backend/app/providers/: __init__.py  base.py  gemma.py
backend/app/routers/: meta.py  ocr.py  stt.py  translate.py
backend/app/services/: stt.py
deploy/: README.md
mobile/: app.json  metro.config.js  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  ocr.tsx  voice.tsx
mobile/src/: LanguagePicker.tsx  LanguagesContext.tsx  api.ts
web/: next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: LanguagePicker.tsx  OcrTranslator.tsx  TextTranslator.tsx  VoiceTranslator.tsx
web/lib/: api.ts
