[project]
name = "translate-backend"
version = "0.1.0"
description = "Multilingual translation backend powered by Gemma 4 (swappable via GEMMA_MODEL env)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.45.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "httpx==0.28.1",
    "python-multipart==0.0.26",
    "faster-whisper==1.2.1",
    "pillow==12.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.11",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
